kubernetes/ingress/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-service-gateway-ingress
  namespace: peerprep
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "chat-service-api-service, editor-service-api-service"
    nginx.ingress.kubernetes.io/server-snippet: |
      # Block API endpoint for creating rooms
      location ~ /room-service/rooms/?$ {
        return 403;
      }

      # Block API endpoint for creating attempt histories
      location ~ /attempt-history-service/add/?$ {
        return 403;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: peerprep.us.to
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage-service-api-service
                port:
                  number: 9010
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service-api-service
                port:
                  number: 9000
          - path: /question-service
            pathType: Prefix
            backend:
              service:
                name: question-service-api-service
                port:
                  number: 9001
          - path: /matching-service
            pathType: Prefix
            backend:
              service:
                name: matching-service-api-service
                port:
                  number: 9002
          - path: /room-service
            pathType: Prefix
            backend:
              service:
                name: room-service-api-service
                port:
                  number: 9003
          - path: /editor-service
            pathType: Prefix
            backend:
              service:
                name: editor-service-api-service
                port:
                  number: 9004
          - path: /chat-service
            pathType: Prefix
            backend:
              service:
                name: chat-service-api-service
                port:
                  number: 9005
          - path: /attempt-history-service
            pathType: Prefix
            backend:
              service:
                name: attempt-history-service-api-service
                port:
                  number: 9006
          - path: /docs-service
            pathType: Prefix
            backend:
              service:
                name: docs-service-api-service
                port:
                  number: 9007
          - path: /webpage-service
            pathType: Prefix
            backend:
              service:
                name: webpage-service-api-service
                port:
                  number: 9010
